testsuite/tests/typecheck/should_fail/tcfail183.hs
{-# LANGUAGE Haskell2010 #-}

module ShouldCompile where

newtype Swizzle = MkSwizzle (forall a. Ord a => [a] -> [a])
