testsuite/tests/typecheck/should_fail/tcfail183.stderr

tcfail183.hs:5:30: error: [GHC-25955]
    Illegal symbol ‘forall’ in type
    Suggested fix:
      Perhaps you intended to use RankNTypes (implied by ImpredicativeTypes)
      or a similar language extension to enable explicit-forall syntax: forall <tvs>. <type>
